--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <div id="app">
         <div id="image-area">
             <div id="image-area-top">
-                <img class="img-fluid" id="tfs-logo" class="img-fluid" src="/images/logo.png">
+                <img onclick="link()" class="img-fluid" id="tfs-logo" class="img-fluid" src="/images/logo.png">
             </div>
             <div id="image-area-bottom">
                 <img onclick="link()" class="img-fluid" id="tfs-enter" src="/images/enter-logo.png">
