modified keyframs animation code on landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
             <div id="image-area-top">
                 <img onclick="link()" class="img-fluid" id="tfs-logo" class="img-fluid" src="/images/logo.png">
             </div>
-            <div id="image-area-bottom">
+            <!-- <div id="image-area-bottom">
                 <img onclick="link()" class="img-fluid" id="tfs-enter" src="/images/enter-logo.png">
-            </div>
+            </div> -->
         </div>
     </div>
 
