--- a/public/stylesheets/style-title.css
+++ b/public/stylesheets/style-title.css
@@ -1,7 +1,3 @@
-body {
-  /* animation: fadein 4s; */
-}
-
 #app {
   height: 100vh;
   width: 100vw;
@@ -21,7 +17,7 @@ body {
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;   
+  z-index: -1;
 }
 
 #image-area {
@@ -33,6 +29,7 @@ body {
 
 #image-area-top {
   grid-area: 1 / 1 / span 1 / span 1;
+  animation: fadein 3s;
 }
 
 #image-area-bottom {
@@ -51,8 +48,9 @@ body {
 }
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    from { opacity: 0; transform: scale(0); }
+    20% { opacity: 0; transform: scale(0); }
+    to   { opacity: 1; transform: scale(1); }
 }
 
 @media (max-width: 900px) {
