--- a/views/user/password-change.ejs
+++ b/views/user/password-change.ejs
@@ -3,35 +3,37 @@
 
 <% include ../partials/head %>
 
-<body class=" text-center" style="background-image: radial-gradient(white, rgb(226, 186, 134));">
-    <link rel="stylesheet" href="/stylesheets/signin.css">
+<body>
     <% include ../partials/nav %>
-    <img src="/images/scroll.png" style="position: absolute; justify-self: center; align-self: center; z-index: -1;"
-        height="100%">
-
-    <form class="form-signin" method="POST" action="/user/passwordrecovery/<%= params %>">
-
-        <% for (let err of errors) { %>
-        
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <%= err%>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+    <div id="app">
+        <div id="sign-in-area">
+            <img src="/images/scroll.png">
         </div>
-        <% } %>
 
-        <!-- <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> -->
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="text" id="inputPassword" class="form-control" placeholder="Password" name="password">
-        <br>
-        <input type="text" id="inputPassword2" class="form-control" placeholder="Confirm password" name="password2">
-        <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" style="font-family: fantasy;">Change Password</button>
-        <br>
-    </form>
+        <div id="form-area">
+        <form class="form-signin" method="POST" action="/user/passwordrecovery/<%= params %>">
 
-    </a>
+            <% for (let err of errors) { %>
+            
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <%= err%>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <% } %>
+
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password">
+            <br>
+            <input type="password" id="inputPassword2" class="form-control" placeholder="Confirm password" name="password2">
+            <br>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" style="font-family: fantasy;">Change Password</button>
+            <br>
+        </form>
+    </div>
+
+    <link rel="stylesheet" href="/stylesheets/signin.css">
 </body>
 
 
