--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -22,6 +22,16 @@
             </div>
             <% } %>
 
+            <% for (let s of success) { %>
+            
+            <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                <%= s%>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <% } %>
+
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="text" id="inputEmail" class="form-control form-resize" placeholder="Email address" name="email">
             <br>
